cluster/overlays/zahariev.com/monitoring/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.zahariev.com
  tls:
  - hosts:
    - grafana.zahariev.com
    secretName: grafana-tls
